// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressBar > re-renders the \`ProgressBar\` component when the current percentage property changes 1`] = `
<div
  aria-label="Loading"
  class="dusk-progress-bar"
  role="progressbar"
>
  <div
    class="dusk-progress-bar__filler"
    style="width: 0%"
  />
</div>
`;

exports[`ProgressBar > re-renders the \`ProgressBar\` component when the current percentage property changes 2`] = `
<div
  aria-label="Loading"
  class="dusk-progress-bar"
  role="progressbar"
>
  <div
    class="dusk-progress-bar__filler"
    style="width: 50%"
  />
</div>
`;

exports[`ProgressBar > renders the \`ProgressBar\` component with current percentage set as zero 1`] = `
<div
  aria-label="Loading"
  class="dusk-progress-bar"
  role="progressbar"
>
  <div
    class="dusk-progress-bar__filler"
    style="width: 0%"
  />
</div>
`;

exports[`ProgressBar > renders the \`ProgressBar\` component with no current percentage set 1`] = `
<div
  aria-label="Loading"
  class="dusk-progress-bar"
  role="progressbar"
>
  <div
    class="dusk-progress-bar__filler dusk-progress-bar__filler--undetermined"
  />
</div>
`;

exports[`ProgressBar > should pass additional class names to the rendered element 1`] = `
<div
  aria-label="Loading"
  class="dusk-progress-bar foo bar"
  role="progressbar"
>
  <div
    class="dusk-progress-bar__filler"
    style="width: 0%"
  />
</div>
`;
